--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -19,8 +19,8 @@
     //},
     "lab03": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "api/SignInGoogle",
+      "launchBrowser": false,
+      "launchUrl": "api/users",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
